--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -1,6 +1,8 @@
 name: llvmdev
 
 on:
+  issue_comment:
+    types: [created, edited]
   pull_request:
     paths:
       - .github/workflows/llvmdev_build.yml
@@ -51,25 +53,91 @@ env:
 jobs:
 
   check:
+    if: |
+      github.event_name != 'issue_comment' ||
+      contains(github.event.comment.body, '/gha llvmdev')
     runs-on: ubuntu-24.04
     outputs:
       matrix: ${{ steps.evaluate.outputs.matrix }}
+      pr_comment_trigger_ref: ${{ steps.cmd.outputs.ref }}
+      pr_comment_trigger_status: ${{ steps.parsed_command.outputs.should_run }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3.13'
+
+      - name: 'PR Comment - Command Check (1/2)'
+        # This step verifies and validates the trigger command. It checks if the
+        # command is correct and if the issuer has the necessary permissions.
+        # for more details see https://github.com/github/command
+        # The workflow proceeds only if `steps.cmd.outputs.continue == 'true'`.
+        uses: github/command@v2
+        id: cmd
+        if: ${{ github.event_name == 'issue_comment' }}
+        with:
+          command: "/gha llvmdev"
+          reaction: "rocket"
+          allowed_contexts: pull_request
+          allow_forks: true
+          param_separator: " "
+
+      - name: 'PR Comment - Parse Parameters (2/2)'
+        # This step parses the parameters from the PR comment command.
+        # The parsed parameters are then converted to a JSON string to mimic
+        # the structure of the `workflow_dispatch` event's `inputs`.
+        # The workflow proceeds only if
+        # `steps.parsed_command.outputs.should_run == 'true'`.
+        id: parsed_command
+        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue == 'true' }}
+        run: |
+          SHOULD_RUN="true"
+          PARAMS_JSON="{}"
+          # Default values
+          PLATFORM="all"
+          RECIPE="all"
+
+          PARAMS=(${{ steps.cmd.outputs.params }})
+          echo "PARAMS: ${PARAMS[*]}"
+          for param in "${PARAMS[@]}"; do
+            case "$param" in
+              platform=*) PLATFORM="${param#*=}" ;;
+              recipe=*) RECIPE="${param#*=}" ;;
+            esac
+          done
+          PARAMS_JSON=$(printf '{"platform": "%s", "recipe": "%s"}' "$PLATFORM" "$RECIPE")
+          echo "should_run=$SHOULD_RUN" >> "$GITHUB_OUTPUT"
+          echo "command_params_json=$PARAMS_JSON" >> "$GITHUB_OUTPUT"
+
+      - name: Post Workflow Trigger Comment
+        # This step posts a comment on the PR to indicate the status of the
+        # workflow trigger. It includes a link to the workflow run for easy
+        # access to the logs.
+        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue == 'true' }}
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          RUN_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          if [[ "${{ steps.parsed_command.outputs.should_run }}" == "true" ]]; then
+            BODY="**llvmlite workflow triggered**<br><br>Successfully triggered<br><br><pre>workflow id: ${{ github.run_id }}<br>details: $RUN_URL</pre>"
+          else
+            BODY="**llvmlite workflow failed**<br><br>Failed to trigger<br><br><pre>workflow id: ${{ github.run_id }}<br>details: $RUN_URL</pre>"
+          fi
+          gh pr comment ${{ steps.cmd.outputs.issue_number }} --body "$BODY"
+
       - name: Evaluate
+        if: ${{ github.event_name != 'issue_comment' || steps.parsed_command.outputs.should_run == 'true' }}
         id: evaluate
         env:
           GITHUB_EVENT_NAME: ${{ github.event_name }}
           GITHUB_LABEL_NAME: ${{ github.event.label.name }}
-          GITHUB_WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
+          GITHUB_WORKFLOW_INPUT: ${{ (github.event_name == 'issue_comment' && steps.parsed_command.outputs.command_params_json) || toJson(github.event.inputs) }}
         run: |
           ./buildscripts/github/llvmdev_evaluate.py
 
   build:
     needs: check
+    if: ${{ (github.event_name == 'issue_comment' && needs.check.outputs.pr_comment_trigger_status == 'true') || github.event_name != 'issue_comment' }}
     name: ${{ matrix.recipe }}-${{ matrix.platform }}
     runs-on: ${{ matrix.runner }}
     defaults:
@@ -82,6 +150,8 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ github.event_name == 'issue_comment' && needs.check.outputs.pr_comment_trigger_ref || github.ref }}
 
       - name: Setup platform-specific requirements
         run: |
